--- a/app/src/main/res/menu/menu_buscar_responsable_o_evento_por_patrocinio.xml
+++ b/app/src/main/res/menu/menu_buscar_responsable_o_evento_por_patrocinio.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
+
     <item
         android:id="@+id/search"
         android:icon="@android:drawable/ic_menu_search"
@@ -10,6 +12,10 @@
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always" />
 
-
+    <item
+        android:id="@+id/editar_item_evento"
+        android:icon="@drawable/ic_editar_tanda"
+        android:title="@string/action_editar_item_evento"
+        app:showAsAction="never" />
 
 </menu>
