--- a/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
+++ b/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
@@ -47,7 +47,7 @@
                         android:layout_marginLeft="2dp"
                         android:layout_marginTop="2dp"
                         android:layout_marginRight="2dp"
-                        android:background="#ef6c00"
+                        android:background="#b71c1c"
                         android:gravity="bottom|center"
                         android:text="Vuelta N°:"
                         android:textColor="@android:color/background_light"
@@ -61,14 +61,13 @@
                 <!--#################################################-->
 
 
-
                 <LinearLayout
                     android:id="@+id/layout_horizontal_segunda_tupla_erep"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="2dp"
                     android:layout_marginRight="2dp"
-                    android:background="#ff9800"
+                    android:background="#d32f2f"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
@@ -84,9 +83,6 @@
                         android:textSize="20sp" />
 
 
-
-
-
                     <ImageView
 
                         android:id="@+id/img_entrega_erep"
@@ -97,10 +93,10 @@
 
                     <TextView
 
-                        android:layout_weight="1"
                         android:id="@+id/entrega_erep"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:gravity="center|left"
                         android:text="Entrega"
                         android:textColor="#FFFF"
@@ -117,10 +113,10 @@
 
                     <TextView
 
-                        android:layout_weight="1"
                         android:id="@+id/retiro_erep"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:gravity="left"
                         android:text="Retiro"
                         android:textColor="#FFFF"
