--- a/app/src/main/res/layout/content_buscar_responsable_para_patrocinio.xml
+++ b/app/src/main/res/layout/content_buscar_responsable_para_patrocinio.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
 
 
-    android:id="@+id/parent_layout_vertical_buscador_evento"
+    android:id="@+id/contenedor_principal_layout_vertical_buscador_evento"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -18,6 +18,14 @@
 
 
 
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+
+
         <!-- List View de elementos  -->
         <ListView
             android:id="@+id/list_view"
@@ -26,9 +34,35 @@
             android:layout_weight="1"
             android:visibility="gone"/>
 
+    </LinearLayout>
 
 
 
 
+    <ScrollView
 
-</LinearLayout> <!-- Fin del "parent_layout_vertical_buscador_evento" -->
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+
+
+        <LinearLayout
+
+            android:id="@+id/parent_layout_vertical_buscador_evento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+        </LinearLayout> <!-- Fin del "parent_layout_vertical_buscador_evento" -->
+
+
+
+
+    </ScrollView>
+
+
+
+
+</LinearLayout>
