--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -65,9 +65,9 @@
                 android:weightSum="4">
 
 
-                <TextView
+                <EditText
 
-                    android:id="@+id/tv_nombre_evento_recibir"
+                    android:id="@+id/et_nombre_evento_recibir"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -77,12 +77,15 @@
                     android:text="TORNEO DE VOLEY - MORAVA"
                     android:textColor="#000"
                     android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:focusable="false"
+                    android:cursorVisible="false"
+                    android:background="#eeeeee"/>
 
 
-                <TextView
+                <EditText
 
-                    android:id="@+id/tv_nombre_apellido_responsable_recibir"
+                    android:id="@+id/et_nombre_apellido_responsable_recibir"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -92,7 +95,10 @@
                     android:text="PINTOS FRANCO"
                     android:textColor="#000"
                     android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:focusable="false"
+                    android:cursorVisible="false"
+                    android:background="#eeeeee"/>
 
                 <View
 
@@ -130,9 +136,9 @@
                         android:textStyle="bold" />
 
 
-                    <TextView
+                    <EditText
 
-                        android:id="@+id/tv_valor_fecha_inicio_recibir"
+                        android:id="@+id/et_valor_fecha_inicio_recibir"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -140,7 +146,10 @@
                         android:text="Fecha"
                         android:textColor="#000"
                         android:textSize="25sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:focusable="false"
+                        android:cursorVisible="false"
+                        android:background="#eeeeee"/>
 
 
                 </LinearLayout>
@@ -169,9 +178,10 @@
                         android:textStyle="bold" />
 
 
-                    <TextView
+                    <EditText
 
-                        android:id="@+id/tv_valor_fecha_fin_recibir"
+
+                        android:id="@+id/et_valor_fecha_fin_recibir"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -179,7 +189,10 @@
                         android:text="Fecha"
                         android:textColor="#000"
                         android:textSize="25sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:focusable="false"
+                        android:cursorVisible="false"
+                        android:background="#eeeeee"/>
 
 
                 </LinearLayout>
