--- a/app/src/main/res/layout/repartidores_activity_main.xml
+++ b/app/src/main/res/layout/repartidores_activity_main.xml
@@ -95,8 +95,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_person_add_black_24dp"
-        app:backgroundTint="?attr/colorError" />
+        android:src="@drawable/ic_fab_nuevo_responsable"
+        app:backgroundTint="#304ffe" />
 
 
 
