Patrocinio: editar todos los items, color undeerline y punteros naranjas
Ahora es posible editar todos los item's responsables, el color de la linea del edittext cuando se activa es naranja y también su puntero.

--- a/app/src/main/res/drawable/edit_text_material_customizado.xml
+++ b/app/src/main/res/drawable/edit_text_material_customizado.xml
@@ -24,8 +24,10 @@
         <item>
             <nine-patch
                 android:src="@drawable/abc_textfield_activated_mtrl_alpha"
-                android:tint="?attr/colorControlActivated" />
+                android:tint="#ff9100" />
         </item>
     </selector>
 
 </inset>
+
+<!--android:tint="?attr/colorControlActivated" -->
