--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -2,6 +2,7 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
 
     android:orientation="vertical"
@@ -73,14 +74,15 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="15dp"
+                    android:background="#eeeeee"
+                    android:cursorVisible="false"
+                    android:focusable="false"
                     android:gravity="center"
                     android:text="TORNEO DE VOLEY - MORAVA"
                     android:textColor="#000"
+                    android:textCursorDrawable="@color/colorCursorSupervisores"
                     android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:focusable="false"
-                    android:cursorVisible="false"
-                    android:background="#eeeeee"/>
+                    android:textStyle="bold" />
 
 
                 <EditText
@@ -94,6 +96,7 @@
                     android:gravity="center"
                     android:text="PINTOS FRANCO"
                     android:textColor="#000"
+                    android:textCursorDrawable="@color/colorCursorSupervisores"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:focusable="false"
@@ -149,7 +152,8 @@
                         android:textStyle="bold"
                         android:focusable="false"
                         android:cursorVisible="false"
-                        android:background="#eeeeee"/>
+                        android:background="#eeeeee"
+                        android:textCursorDrawable="@color/colorCursorSupervisores"/>
 
 
                 </LinearLayout>
@@ -192,7 +196,9 @@
                         android:textStyle="bold"
                         android:focusable="false"
                         android:cursorVisible="false"
-                        android:background="#eeeeee"/>
+                        android:background="#eeeeee"
+                        android:textCursorDrawable="@color/colorCursorSupervisores"
+                        />
 
 
                 </LinearLayout>
