--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="colorPrimary">#283593</color>
     <color name="colorPrimaryDark">#1a237e</color>
     <color name="colorAccent">#80deea</color>
+
+
+
+    <color name="colorCursorSupervisores">#ff9100</color>
+
+
 </resources>
 
-<!-- #3F51B5-->
-
-<!-- #283593-->
 
