--- a/app/src/main/res/menu/menu_buscar_responsable_o_evento_por_patrocinio.xml
+++ b/app/src/main/res/menu/menu_buscar_responsable_o_evento_por_patrocinio.xml
@@ -10,12 +10,23 @@
         android:icon="@android:drawable/ic_menu_search"
         android:title="@string/hint_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="always|collapseActionView"
+        android:orderInCategory="1"/>
+
+
+    <item
+        android:id="@+id/action_save_changes"
+        android:icon="@drawable/ic_save_tanda"
+        android:orderInCategory="2"
+        android:title="@string/action_save_changes_erep"
+        app:showAsAction="always|withText" />
 
     <item
         android:id="@+id/editar_item_evento"
         android:icon="@drawable/ic_editar_tanda"
         android:title="@string/action_editar_item_evento"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:orderInCategory="3"/>
 
 </menu>
+
